--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
         </div>
         <div class="button">
           <button>
-            <a href="https://karnatakatourism.org/" target="_blank"
-              >Read More</a
-            >
+            <a href="https://karnatakatourism.org/" target="_blank">Read More</a>
           </button>
         </div>
       </div>
